[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "electrum-lntransport"
authors = [
    { name = "The Electrum developers" },
]
description = "Standalone bolt 8 transport library"
keywords = ["bolt8", "lightning", "bolt-8", "electrum"]
readme = "README.md"
license = {'file'="LICENSE.txt"}
requires-python = ">=3.10"
dependencies = [
    "electrum_ecc",
    "aiorpcx>=0.22.0,<0.26",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
]
dynamic = ['version']

[project.optional-dependencies]
crypto = [
    "cryptography>=2.8",
]

#[project.urls]
#Homepage = "https://github.com/spesmilo/electrum-lntransport"
#Repository = "https://github.com/spesmilo/electrum-lntransport"

[tool.setuptools.dynamic]
version = { attr = 'electrum_lntransport.__version__' }
